--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
         <script type="text/jsx">
             const app = document.getElementById('app');
 
-            function Header() {
+            function Header(props) {
+                console.log('props: ', props)
                 return (<h1>Develop. Preview. Ship. 🚀</h1>);
             }
 
@@ -18,7 +19,7 @@
                 return (
                     <div>
                         {/* Nesting the Header component */}
-                        <Header />
+                        <Header title="React 💙"/>
                     </div>
                 )
             }
