--- a/index.html
+++ b/index.html
@@ -10,16 +10,23 @@
         <script type="text/jsx">
             const app = document.getElementById('app');
 
-            function Header(props) {
-                console.log('props: ', props)
-                return (<h1>Develop. Preview. Ship. 🚀</h1>);
+            function Header({ title }) {
+                console.log('title: ', title)
+                return <h1>{title ? title : 'Default Title'}</h1>
+                {/* return (<h1>Develop. Preview. Ship. 🚀</h1>); */}
             }
 
             function HomePage() {
+                const names = ['Ada Lovelace', 'Grace Hopper', 'Margaret Hamilton'];
+
                 return (
                     <div>
                         {/* Nesting the Header component */}
                         <Header title="React 💙"/>
+                        {/* <Header /> */}
+                        <ul>
+                            {names.map(name => <li key={name}>{name}</li>)}
+                        </ul>
                     </div>
                 )
             }
