--- a/index.html
+++ b/index.html
@@ -11,22 +11,26 @@
             const app = document.getElementById('app');
 
             function Header({ title }) {
-                console.log('title: ', title)
                 return <h1>{title ? title : 'Default Title'}</h1>
-                {/* return (<h1>Develop. Preview. Ship. 🚀</h1>); */}
             }
 
             function HomePage() {
                 const names = ['Ada Lovelace', 'Grace Hopper', 'Margaret Hamilton'];
 
+                const [likes, setLikes] = React.useState(0);
+
+                function handleClick() {
+                    setLikes(likes + 1)
+                }
+
                 return (
                     <div>
-                        {/* Nesting the Header component */}
-                        <Header title="React 💙"/>
-                        {/* <Header /> */}
+                        <Header title="Develop. Preview. Ship. 🚀"/>
                         <ul>
                             {names.map(name => <li key={name}>{name}</li>)}
                         </ul>
+
+                        <button onClick={handleClick}>Likes({likes})</button>
                     </div>
                 )
             }
